update website contents

--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@ title: Home
 <table>
 <tbody>
 	<tr>
-		<td>May24 - Present</td>
+		<td>May 2024 - Present</td>
 		<td>CAD Intern, Intel</td>			
 	</tr>
 	<tr>
-		<td>Aug20 - Present</td>
+		<td>Aug 2020 - Present</td>
 		<td>Research Assistant, USC</td>
 	</tr>
 	<tr>
-		<td>Spring22</td>
+		<td>Spring 2022</td>
 		<td>Teaching Assistant, <a href="https://classes.usc.edu/term-20221/classes/ee">EE577a</a>, USC</td>
 	</tr>
 	<tr>
-		<td>Spring19</td>
+		<td>Spring 2019</td>
 		<td>Teaching Assistant, Practice for Programming, PKU</td>
 	</tr>
 	<tr>
-		<td>Fall21</td>
+		<td>Fall 2021</td>
 		<td>Teaching Assistant, <a href="https://classes.usc.edu/term-20213/classes/ee">EE477L</a>, USC</td>
 	</tr>
 	<tr>
-		<td>Summer23</td>
+		<td>Summer 2023</td>
 		<td><a href="https://viterbiundergrad.usc.edu/diversity/center-for-engineering-diversity/vsi/">VSI</a> Program Mentor, USC</td>
 	</tr>
 	<tr>
-		<td>Summer23, Summer22</td>
+		<td>Summer 2023, Summer 2022</td>
 		<td><a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</td>
 	</tr>
 	<tr>
-		<td>Spring24, Fall22, Fall21</td>
+		<td>Spring 2024, Fall 2022, Fall 2021</td>
 		<td><a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a> Project Mentor, USC</td>
 	</tr>
 </tbody>
@@ -108,27 +108,27 @@ title: Home
 <table>
 <tbody>
 	<tr>
-		<td>May24</td>
+		<td>May 2024</td>
 		<td>I will join Intel as a CAD intern.</td>	
 	</tr>
 	<tr>
-		<td>Apr24</td>
+		<td>Apr 2024</td>
 		<td>Our paper "<a href="https://ieeexplore.ieee.org/abstract/document/10528687">DECOR: Enhancing Logic Locking Against Machine Learning-Based Attacks</a> has been accepted at International Symposium on Quality Electronic Design (ISQED) 2024.</td>
 	</tr>
 	<tr>
-		<td>Apr23</td>
+		<td>Apr 2023</td>
 		<td>Our paper "<a href="https://ieeexplore.ieee.org/abstract/document/10247822">SimLL: Similarity-Based Logic Locking Against Machine Learning Attacks</a>" has been accepted at Design Automation Conference (DAC) 2023.</td>			
 	</tr>
 	<tr>
-		<td>Apr23</td>
+		<td>Apr 2023</td>
 		<td>Our collaboration work "<a href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>" with <a href="https://sites.usc.edu/eessc/">Prof. Beerel's group</a> has been accepted at International Symposium on Quality Electronic Design (ISQED) 2023.</td>
 	</tr>
 	<tr>
-		<td>Mar23</td>
+		<td>Mar 2023</td>
 		<td>Our paper "<a href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>" has been published at IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD).</td>
 	</tr>
 	<tr>
-		<td>Apr22</td>
+		<td>Apr 2022</td>
 		<td>I have been selected to participate in the Young Fellows program promoted by the 59h Design Automation Conference (DAC).</td>
 	</tr>
 </tbody>
