--- a/research.html
+++ b/research.html
@@ -66,28 +66,83 @@ We focus on cyber-physical system design and trustworthy SoC design.
 
 <h1><a class="link" href="https://scholar.google.com/citations?hl=en&user=B2lxJR0AAAAJ&view_op=list_works&sortby=pubdate">Publications</a></h1>
 
-<h2>Book Chapter</h2>
+<h2>Book Chapters</h2>
 
 <ol>
-	<li>Y. Hu, <b>K. Yang</b>, S. Nazarian, P. Nuzzo, "<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>," in VLSI-SoC: Design Trends, Springer, pp. 255-278, Jul. 2021.</li>
+	<li>
+		<b>K. Yang</b>, Y. Hu, D. Chen, C. Lin, Y. Yi, P. A. Beerel, P. Nuzzo, 
+		<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-031-71436-8_13">
+			Machine Learning-Enhanced Analysis and Design for Trustworthy Integrated Circuits</a>,
+		<a class="link" href="https://link.springer.com/book/10.1007/978-3-031-71436-8">
+			AI-Enabled Electronic Circuit and System Design: From Ideation to Utilization</a>, 
+		Springer Nature Switzerland, pp. 467--496, Jan. 2025.
+	</li>
+	<li>
+		Y. Hu, <b>K. Yang</b>, S. Nazarian, P. Nuzzo, 
+		<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">
+			SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>,
+		<a class="link" href="https://link.springer.com/book/10.1007/978-3-030-81641-4">
+			VLSI-SoC: Design Trends</a>, 
+		Springer, pp. 255-278, Jul. 2021.
+	</li>
 </ol>
 
 <h2>Journal Paper</h2>
 
 <ol>
-	<li>Y. Hu, Y. Zhang, <b>K. Yang</b>, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/10061617">On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>," in IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), Mar. 2023.</li>
+	<li>
+		Y. Hu, Y. Zhang, <b>K. Yang</b>, D. Chen, P. A. Beerel, P. Nuzzo, 
+		<a class="link" href="https://ieeexplore.ieee.org/document/10061617">
+			On the Security of Sequential Logic Locking Against Oracle-Guided Attacks</a>,
+		IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems (TCAD), Mar. 2023.
+	</li>
 </ol>
 
 <h2>Conference Papers</h2>
 
 <ol>
-	<li>Y. Hu, <b>K. Yang</b>, S. Dutta Chowdhury, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2403.01789">DECOR: Enhancing Logic Locking Against Machine Learning-Based Attacks</a>, International Symposium on Quality Electronic Design(ISQED), Apr. 2024.</li>
-	<li>S. D. Chowdhury, <b>K. Yang</b>, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2305.05870">Similarity-Based Logic Locking Against Machine Learning Attacks</a>," Design Automation Conference (DAC), Jul. 2023.</li>
-	<li>D. Chen, X. Zhou, Y. Hu, Y. Zhang, <b>K. Yang</b>, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>," International Symposium on Quality Electronic Design (ISQED), Apr. 2023.</li>
-	<li>Y. Hu, Y. Zhang, <b>K. Yang</b>, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9702267">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), pp. 281-291, Dec. 2021.</li>
-	<li>S. Dutta Chowdhury, <b>K. Yang</b>, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9643498">ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering</a>," Proc. Int. Conf. Computer Aided Design (ICCAD), pp. 1-9, Nov. 2021.</li>
-	<li>Y. Hu, <b>K. Yang</b>, S. D. Chowdhury and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9473956">Risk-Aware Cost-Effective Design Methodology for Integrated Circuit Locking</a>," Proc. IEEE/ACM Design Automation and Testing in Europe Conf. (DATE), pp. 1182-1185, Feb. 2021.</li>
-	<li>Y. Hu, <b>K. Yang</b>, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," Proc. IFIP/IEEE Int. Conf. Very Large-Scale Integration (VLSI-SoC), pp. 129-134, Oct. 2020.</li>
+	<li>
+		Y. Hu, <b>K. Yang</b>, S. Dutta Chowdhury, P. Nuzzo, 
+		<a class="link" href="https://arxiv.org/abs/2403.01789">
+			DECOR: Enhancing Logic Locking Against Machine Learning-Based Attacks</a>, 
+		International Symposium on Quality Electronic Design(ISQED), Apr. 2024.
+	</li>
+	<li>
+		S. D. Chowdhury, <b>K. Yang</b>, P. Nuzzo, 
+		<a class="link" href="https://arxiv.org/abs/2305.05870">
+			Similarity-Based Logic Locking Against Machine Learning Attacks</a>,
+		Design Automation Conference (DAC), Jul. 2023.
+	</li>
+	<li>
+		D. Chen, X. Zhou, Y. Hu, Y. Zhang, <b>K. Yang</b>, P. A. Beerel, P. Nuzzo, 
+		<a class="link" href="https://www.isqed.org/English/Archives/2023/Technical_Sessions/accepted.html">
+			Unraveling Latch Locking Using Machine Learning, Boolean Analysis, and ILP</a>,
+		International Symposium on Quality Electronic Design (ISQED), Apr. 2023.
+	</li>
+	<li>
+		Y. Hu, Y. Zhang, <b>K. Yang</b>, D. Chen, P. A. Beerel, P. Nuzzo, 
+		<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9702267">
+			Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>,
+		Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), pp. 281-291, Dec. 2021.
+	</li>
+	<li>
+		S. Dutta Chowdhury, <b>K. Yang</b>, P. Nuzzo, 
+		<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9643498">
+			ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering</a>,
+		Proc. Int. Conf. Computer Aided Design (ICCAD), pp. 1-9, Nov. 2021.
+	</li>
+	<li>
+		Y. Hu, <b>K. Yang</b>, S. D. Chowdhury and P. Nuzzo, 
+		<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9473956">
+			Risk-Aware Cost-Effective Design Methodology for Integrated Circuit Locking</a>,
+		Proc. IEEE/ACM Design Automation and Testing in Europe Conf. (DATE), pp. 1182-1185, Feb. 2021.
+	</li>
+	<li>
+		Y. Hu, <b>K. Yang</b>, S. Nazarian and P. Nuzzo, 
+		<a class="link" href="https://ieeexplore.ieee.org/document/9344079">
+			SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>,
+		Proc. IFIP/IEEE Int. Conf. Very Large-Scale Integration (VLSI-SoC), pp. 129-134, Oct. 2020.
+	</li>
 </ol>
 
 <!-- <p>
